--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h1>Call to action! It's time</h1>
                     <p>Sign up for our product by clicking that button right there!</p>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item adjust-button">
                     <button>Sign up</button>
                 </div>
             </div>
