Edit links and header logo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <section id="hero">
         <div class="container">
             <nav class="flex-container">
-                <p class="flex-item">Header Logo</p>
+                <p class="flex-item">Mercury</p>
                 <ul class="flex-item flex-container">
-                    <li class="flex-item">header link one</li>
-                    <li class="flex-item">header link two</li>
-                    <li class="flex-item">header link three</li>
+                    <li class="flex-item">About us</li>
+                    <li class="flex-item">Contact us</li>
+                    <li class="flex-item">Cart</li>
                 </ul>
             </nav>
         </div>
